# mineflared

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
